fix transform based partition spec scenario